--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
+<!-— Facebook and Open Graph -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="http://ritualbarbershop.com/" />
+<meta property="og:title" content="Ritual Barbershop" />
+<meta property="og:description" content="Get a haircut and a shave in Vernon, BC" />
+<meta property="og:image" content="http://ritualbarbershop.com/img/ritual-cover.jpg" />
+ 
+<!-— Twitter Cards -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:domain" value="ritualbarbershop.com" />
+<meta name="twitter:title" value="Ritual Barbershop" />
+<meta name="twitter:description" value="Get a haircut and a shave in Vernon, BC" />
+<meta name="twitter:image" content="http://ritualbarbershop.com/img/ritual-cover.jpg" />
+<meta name="twitter:url" value="http://ritualbarbershop.com/" />
+
 <title>Ritual Barbershop in Vernon, BC</title>
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
 <link href='https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
@@ -13,11 +28,17 @@
 <div class="main">
   <article>
   	<img src="img/ritual-logo.jpg" style="width:50%;" alt="Ritual Barbershop" border="0" class="img-responsive">
-    <h1 align="center">Coming soon</h1>
+    <h1 align="center">Website coming soon!</h1>
   	<p align="center"><strong>Address:</strong> #102-3002 32ns Ave Vernon BC V1T 2L7</p>
     <div align="center" style="margin:60px 0;"><a href="https://ritualbarbershop.setmore.com" class="button">Book your appointment</a></div>
   	<h2 align="center">Hours</h2>
   	<p align="center">Tues 10am - 6pm, Wed 9-5, Thur 9-5, Fri 9-5, Sat 9-5</p>
+    <h2 align="center">Find us across from City Hall:</h2>
+    <div align="center">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2550.430078290666!2d-119.27357378436267!3d50.26522780857495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x537dd8e8252bdd55%3A0x2c7a27f92d389d45!2s3002+32nd+Ave+%23102%2C+Vernon%2C+BC+V1T+2L7%2C+Canada!5e0!3m2!1sen!2suk!4v1497111322330" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen></iframe>
+    </div>
+    <h2 align="center">Follow us</h2>
+    <p align="center"><a href="https://www.instagram.com/ritualbarbershop/">Follow us on Instagram</a></p>
   </article>
 </div>
 </body>
