--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <article>
   	<img src="img/ritual-logo.jpg" style="width:50%;" alt="Ritual Barbershop" border="0" class="img-responsive">
     <h1 align="center">Website coming soon!</h1>
-  	<p align="center"><strong>Address:</strong> #102-3002 32ns Ave Vernon BC V1T 2L7</p>
+  	<p align="center"><strong>Address:</strong> #102-3002 32nd Ave, Vernon, BC V1T 2L7</p>
     <div align="center" style="margin:60px 0;"><a href="https://ritualbarbershop.setmore.com" class="button">Book your appointment</a></div>
   	<h2 align="center">Hours</h2>
   	<p align="center">Tues 10am - 6pm, Wed 9-5, Thur 9-5, Fri 9-5, Sat 9-5</p>
